--- a/tugas3/index.html
+++ b/tugas3/index.html
@@ -1,30 +1,32 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Belajar WebGL</title>
-</head>
-<body>
-  <canvas id="glcanvas" width="640" height="480">
-    Browser Anda tidak mendukung HTML5 <code>&lt;canvas&gt;</code>.
-  </canvas>
+<html>
+  <head>
+    <title>Belajar WebGL</title>
+    <meta http-equiv="content-type" content="text/html" charset="ISO-8859-1">
 
-  <!-- Shaders -->
-  <script name="shader" data-src="vertex.glsl" data-type="vertex" data-version="v1"></script>
-  <script name="shader" data-src="fragment.glsl" data-type="fragment" data-version="v1"></script>
+    <script type="text/javascript" src="gl-matrix-min.js"></script>
+    <script type="text/javascript" src="main.js"></script>
 
-  <script name="shader" data-src="vertex2.glsl" data-type="vertex" data-version="v2"></script>
-  <script name="shader" data-src="fragment2.glsl" data-type="fragment" data-version="v2"></script>
-
-  <!-- Library untuk men-dispatch methods -->
-  <script type="text/javascript" src="libs/signals.js"></script>
-
-  <!-- JavaScript untuk menghubungkan ke WebGL -->
-  <script type="text/javascript" src="libs/glUtils.js"></script>
-
-  <!-- JavaScript utama kita -->
-  <script type="text/javascript" src="index.js"></script>
-</body>
+    <script id="shader-fs" type="x-shader/x-fragment">
+      precision mediump float;
+      varying vec4 vColor;
+      void main(void) {
+        gl_FragColor = vColor;
+      }
+    </script>
+    
+    <script id="shader-vs" type="x-shader/x-vertex">
+      attribute vec3 aVertexPosition;
+      attribute vec4 aVertexColor;
+      uniform mat4 uMVMatrix;
+      uniform mat4 uPMatrix;
+      varying vec4 vColor;
+      void main(void) {
+        gl_Position = uPMatrix * uMVMatrix * vec4(aVertexPosition, 1.0);
+        vColor = aVertexColor;
+      }
+    </script>
+  </head>
+  <body onload="webGLStart();">
+    <canvas id="mycanvas" style="border: none" width="600" height="600"></canvas>
+  </body>
 </html>
