--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Kubus Terbuka - Huruf Bercahaya</title>
+  <title>Tugas 4 - Kubus Terbuka</title>
 </head>
 <body>
   <canvas id="glcanvas" width="1350" height="600">
